fixing chatbot on mobile

--- a/user-component-new/components/template/Chatbot.module.css
+++ b/user-component-new/components/template/Chatbot.module.css
@@ -85,6 +85,7 @@
     /* -webkit-transform: scale(0.55); */
     /* -webkit-transform-origin: 0 0; */
   }
+
   .chatbot_box {
     /* transform: translateX(-50px); */
     /* display: none; */
@@ -96,7 +97,7 @@
     position: fixed;
     height: 130px;
     right: 0px;
-    bottom: 10px;
+    bottom: -40px;
     /* transition-duration: 0.5s; */
     /* transition-property: width; */
     /* border-radius: 100% 0 0 100%; */
@@ -119,9 +120,11 @@
     /* transition-property: right, top; */
     /* transition-timing-function: ease-in-out; */
   }
+
   .chatbot_image {
     display: none;
   }
+
   .right_animation {
     right: 20px;
     max-height: max-content;
